# poc-llvm

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
.github/workflows/: build.yaml
conda/: dev.yaml
pocllvm/include/: llvm_arrow.h
pocllvm/ir/: arrow.ll  function.ll  main.ll
pocllvm/src/: llvm_arrow.cpp  main.cpp
scripts/: optclean.sh  run-clang-tidy.sh
src/: custom-type.h  llvm-arrow.cpp  main.cpp  simple-math.cpp
src/arrow/: .makim.yaml  Makefile  arrow-wrap.cpp  arrow-wrap.h
src/arrow/cpp/: main.cpp
src/arrow/ir/: arrow.ll  main.ll
src/ir/: main.ll
src/llvm-cpp/: .makim.yaml  meson.build
src/llvm-cpp/src/: llvmcpp.cpp  llvmcpp.h  main.cpp
src/llvm-ir/: .makim.yaml
src/llvm-ir-cpp/: .makim.yaml  Makefile
src/llvm-ir-cpp/cpp/: simple-math.h
src/llvm-ir-cpp/ir/: custom-types.ll  function.ll  main.ll
src/llvm-ir-cpp/tests/: test_externals.cpp  test_ir.cpp
src/llvm-ir/ir/: basic.ll  custom-types.ll  main.ll
tests/: test_externals.cpp
